--- a/Angular_1_Full_Version/views/calendar.html
+++ b/Angular_1_Full_Version/views/calendar.html
@@ -1,12 +1,11 @@
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-lg-8">
-        <h2>Calendar</h2>
+        <h2>
+            <i class="fad fa-calendar-alt fa-lg"></i> Calendar
+        </h2>
         <ol class="breadcrumb">
             <li>
                 <a href="index.html">Home</a>
-            </li>
-            <li>
-                Extra pages
             </li>
             <li class="active">
                 <strong>Calendar</strong>
@@ -16,7 +15,7 @@
 </div>
 <div class="wrapper wrapper-content" ng-controller="CalendarCtrl">
     <div class="row animated fadeInDown">
-        <div class="col-lg-3">
+        <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
                     <h5>Events List</h5>
